--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h1>Odin Recipes</h1>
 
+    <p><a href="recipes/spaghetti_carbonara.html">Spaghetti Carbonara</a></p>
 </body>
 
-</html>
+</html>l
