--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
+    <a href="../index.html">Home</a>
     <h1>Spaghetti Carbonara</h1>
+    <img src="../imgs/spaghetti_carbonara.jpg" width="300px" height="300px" alt="Spaghetti Carbonara">
   </body>
 
 </html>
