Add Unordered List
For recipe Ingreients

--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -7,9 +7,17 @@
   </head>
 
   <body>
+
     <a href="../index.html">Home</a>
+
     <h1>Spaghetti Carbonara</h1>
     <img src="../imgs/spaghetti_carbonara.jpg" width="300px" height="300px" alt="Spaghetti Carbonara">
+
+    <h3>Description</h3>
+    <p>This <em>Spaghetti Carbonara</em> is a super rich "bacon and egg" pasta dish that's great to serve for company. This recipe also makes an unusual brunch offering.</p>
+
+    <h3>Ingredients</h3>
+    
   </body>
 
 </html>
