--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -16,8 +16,22 @@
     <h3>Description</h3>
     <p>This <em>Spaghetti Carbonara</em> is a super rich "bacon and egg" pasta dish that's great to serve for company. This recipe also makes an unusual brunch offering.</p>
 
-    <h3>Ingredients</h3>
-    <p></p>
+    <h2>Ingredients</h2>
+    <p>
+        <ul>
+            <li>1 pound spaghetti</li>
+            <li>2 tablespoons olive oil, divided, or as needed</li>
+            <li>8 slices bacon, diced</li>
+            <li>1 onion, chopped</li>
+            <li>1 clove garlic, minced</li>
+            <li>¼ cup dry white wine</li>
+            <li>4 large eggs, beaten</li>
+            <li>½ cup grated Parmesan cheese</li>
+            <li>salt and black pepper to taste</li>
+            <li>2 tablespoons chopped fresh parsley</li>
+            <li>2 tablespoons grated Parmesan cheese</li>
+        </ul>
+    </p>
     
   </body>
 
