--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -32,6 +32,18 @@
             <li>2 tablespoons grated Parmesan cheese</li>
         </ul>
     </p>
+
+    <!--Up to Directrions for the recipe, create an ol and write out the directions-->
+    <h2>Directions</h2>
+     <p>
+        <ol>
+            <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes. Drain, toss spaghetti with 1 tablespoon olive oil, and set aside.</li>
+            <li>Place diced bacon in a large skillet over medium heat; cook and stir until evenly browned, about 10 minutes. Drain bacon on paper towels, reserving 2 tablespoons bacon fat in the skillet.</li>
+            <li>Add 1 tablespoon olive oil to bacon fat in the skillet. Add chopped onion and cook over medium heat until onion is translucent. Add minced garlic and cook until fragrant, about 1 minute. Add wine and cook 1 minute more.</li>
+            <li>Return cooked bacon to the skillet; add cooked spaghetti. Toss to coat and heat through, adding more olive oil if it seems dry or sticks together. Add beaten eggs and cook, tossing constantly with tongs or a large fork, until eggs are barely set. Quickly add 1/2 cup Parmesan cheese and toss again. Season with salt and pepper (remember that bacon and Parmesan are very salty).</li>
+            <li>Serve warm with chopped parsley sprinkled on top and extra Parmesan cheese at the table.</li>
+        </ol>
+     </p>
     
   </body>
 
