--- a/recipes/pot_roast.html
+++ b/recipes/pot_roast.html
@@ -11,7 +11,7 @@
         <a href="../index.html">Home</a>
 
         <h1>Easiest Pot Roast Ever</h1>
-        
+        <img src="../imgs/pot_roast.jpg">
 
     </body>
 
