Add Unordered List
Create List for all ingredients

--- a/recipes/pot_roast.html
+++ b/recipes/pot_roast.html
@@ -11,7 +11,10 @@
         <a href="../index.html">Home</a>
 
         <h1>Easiest Pot Roast Ever</h1>
-        <img src="../imgs/pot_roast.jpg">
+        <img src="../imgs/pot_roast.jpg" alt="Pot Roast" width="300" height="300">
+
+        <h3>Description</h3>
+        <p>Make the best pot roast with <em>minimum effort</em> and this easy slow cooker recipe! The roast cooks on top of potatoes, carrots, and celery, resulting in incredibly tender meat and veggies that are perfect for dinner any day of the week.</p>
 
     </body>
 
