Create Directions List
Created an ol to list out the directions in order

--- a/recipes/pot_roast.html
+++ b/recipes/pot_roast.html
@@ -16,6 +16,25 @@
         <h3>Description</h3>
         <p>Make the best pot roast with <em>minimum effort</em> and this easy slow cooker recipe! The roast cooks on top of potatoes, carrots, and celery, resulting in incredibly tender meat and veggies that are perfect for dinner any day of the week.</p>
 
+        <!--Create Unordered Ingredient List-->
+
+        <h3>Ingredients</h3>
+        <p>
+            <ul>
+                <li>6 medium potatoes</li>
+                <li>1 medium yellow onion</li>
+                <li>2 stalks celery</li>
+                <li>1 ½ cups baby carrots</li>
+                <li>1 (3 pound) beef roast</li>
+                <li>3 cubes beef bouillon</li>
+                <li>½ cup water</li>
+            </ul>
+        </p>
+         <!--Up to Directrions for the recipe, create an ol and write out the directions-->
+        <h3>Directions</h3>
+
+
+
     </body>
 
 </html>
