Complete and Link back to Home
View in browser and make sure it is completed

--- a/recipes/pot_roast.html
+++ b/recipes/pot_roast.html
@@ -30,8 +30,16 @@
                 <li>½ cup water</li>
             </ul>
         </p>
-         <!--Up to Directrions for the recipe, create an ol and write out the directions-->
+         <!--Up to Directions for the recipe, create an ol and write out the directions-->
         <h3>Directions</h3>
+        <p>
+            <ol>
+                <li>Gather ingredients.</li>
+                <li>Cut potatoes, onions, and celery into fairly large chunks; place in the bottom of a slow cooker along with baby carrots. Place roast on top of vegetables. Place 3 bouillon cubes randomly on top of the roast and pour in 1/2 cup water.</li>
+                <li>Cover and cook on Low for 6 to 8 hours or on High for 4 to 5 hours. An instant-read thermometer inserted in the thickest part of the roast should read 145 degrees F (65 degrees C).</li>
+                <li>Transfer roast to a platter. Remove vegetables using a slotted spoon and arrange them around the roast.</li>
+            </ol>
+        </p>
 
 
 
