--- a/recipes/spaghetti_carbonara.html
+++ b/recipes/spaghetti_carbonara.html
@@ -33,7 +33,7 @@
         </ul>
     </p>
 
-    <!--Up to Directrions for the recipe, create an ol and write out the directions-->
+    <!--Up to Directions for the recipe, create an ol and write out the directions-->
     <h2>Directions</h2>
      <p>
         <ol>
