--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <p><a href="recipes/spaghetti_carbonara.html">Spaghetti Carbonara</a></p>
     <p><a href="recipes/pot_roast.html">Easiest Pot Roast Ever</a></p>
+    <p><a href="recipes/smash_burger_taco.html">Smash Burger Taco</a></p>
 
 </body>
 
