Create an Unordered List
Create an ul for the ingredients list

--- a/recipes/smash_burger_taco.html
+++ b/recipes/smash_burger_taco.html
@@ -13,6 +13,11 @@
         <h1>Smash Burger Taco</h1>
         <img src="../imgs/smash_burger_taco.png" alt="Smash Burger Taco" height="300" width="300">
 
+        <h3>Description</h3>
+        <p>If you're a <em>smash burger fan</em>, try serving them as a taco with cheese and all the fixings for a different take!</p>
+
+        <h3>Ingredients</h3>
+
     </body>
 
 </html>
