Create an Ordered List
Creat an ol for the directions

--- a/recipes/smash_burger_taco.html
+++ b/recipes/smash_burger_taco.html
@@ -17,6 +17,22 @@
         <p>If you're a <em>smash burger fan</em>, try serving them as a taco with cheese and all the fixings for a different take!</p>
 
         <h3>Ingredients</h3>
+        <p>
+            <ul>
+                <li>1/4 cup mayonnaise</li>
+                <li>1 tablespoon ketchup</li>
+                <li>1 teaspoon mustard</li>
+                <li>1 tablespoon relish</li>
+                <li>1/2 teaspoon hot sauce</li>
+                <li>1 lb ground round</li>
+                <li>1 teaspoon Kosher salt</li>
+                <li>1/2 teaspoon freshly ground black pepper</li>
+                <li>4 (6-inch) flour tortillas</li>
+                <li>2 slices American cheese, cut in half lengthwise</li>
+                <li>1 cup shredded iceberg lettuce</li>
+                <li>1/4 cup diced onion</li>
+            </ul>
+        </p>
 
     </body>
 
