--- a/recipes/smash_burger_taco.html
+++ b/recipes/smash_burger_taco.html
@@ -33,6 +33,16 @@
                 <li>1/4 cup diced onion</li>
             </ul>
         </p>
+        <!--Continue on with ordered list for the directions-->
+        <h3>Directions</h3>
+        <p>
+            <ol>
+                <li>Combine mayo, ketchup, mustard, relish, and hot sauce in a small bowl; set sauce aside. </li>
+                <li>Heat a griddle over medium-high heat.</li>
+                <li>Divide beef into 4 loose portions and place them in mounds on the hot griddle. Season evenly with salt and pepper and cook for 2 minutes. Place a tortilla on top of each beef portion and press down to flatten the beef into the shape and size of the tortilla.</li>
+                <li>Cook until tortilla is golden-brown, 2 to 3 more minutes. Flip each patty over and top with cheese. When cheese has melted and the tortilla has lightly browned, top with lettuce and onions. Drizzle with sauce, remove from the griddle and fold in half like a taco. Serve immediately.</li>
+            </ol>
+        </p>
 
     </body>
 
